2009-11-09  Dirk Schulze  <krit@webkit.org>

Reviewed by Oliver Hunt.

        SVG feDisplacementMap is not implemented
        [https://bugs.webkit.org/show_bug.cgi?id=31255]

        This is the implementation of the SVG filter effect
        feDisplacementMap.

        Test: svg/filters/feDisplacementMap.svg

        * svg/graphics/filters/SVGFEDisplacementMap.cpp:
        (WebCore::FEDisplacementMap::apply):

        Test for SVG filter effect feDisplacementMap.

        * platform/mac/svg/filters/feDisplacementMap-expected.checksum: Added.
        * platform/mac/svg/filters/feDisplacementMap-expected.png: Added.
        * platform/mac/svg/filters/feDisplacementMap-expected.txt: Added.
        * svg/filters/feDisplacementMap.svg: Added.


Canonical link: https://commits.webkit.org/42148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50718 268f45cc-cd09-0410-ab3c-d52691b4dbfc